libs/preprocessor/tests/errors/pe8_if_undefined/stderr.ansi
[31m[PE8] Error:[0m attempted to use `#if` on an undefined macro
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m/source.hpp:1:5[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m#[0m[38;5;249mi[0m[38;5;249mf[0m[38;5;249m [0m[38;5;201ma[0m[38;5;201mr[0m[38;5;201mm[0m[38;5;201ma[0m
 [38;5;240m  │[0m     [38;5;201m─[0m[38;5;201m─[0m[38;5;201m┬[0m[38;5;201m─[0m  
 [38;5;240m  │[0m       [38;5;201m╰[0m[38;5;201m─[0m[38;5;201m─[0m[38;5;201m─[0m undefined macro
[38;5;246m───╯[0m
